Fixed login.php overlaps footer on validation

--- a/frontend/www/css/styles.css
+++ b/frontend/www/css/styles.css
@@ -14,7 +14,7 @@ body {
        font-family:Arial, Helvetica, sans-serif; 
        font-size:12px; 
        color:#000000;
-       background: #ffffff url(../images/bg.png) fixed;
+       background: #ffffff url(../images/bg3.jpg) fixed center repeat-y;
 }
 
 p {
