--- a/frontend/www/css/user.css
+++ b/frontend/www/css/user.css
@@ -9,7 +9,7 @@
 
 
 body { margin:0 auto;
-       background:#414141 url(../images/bg.png) fixed center repeat-x; 
+       background:#414141 url(../images/bg3.jpg) fixed center repeat-y; 
 }
 
 /*** START OF USER_NAVIGATION ***/
@@ -44,10 +44,10 @@ body { margin:0 auto;
 
 /*** START OF CONTENT BOX ***/
 #user_contentbox {
-    position: fixed;
+    position: absolute;
     background-color: #5b9909; 
     width: 800px;
-    height: 650px;
+    height: 100%;
     float: left;
     margin: 10px 160px;
     border-radius: 2px;
@@ -119,7 +119,7 @@ body { margin:0 auto;
 #footer_container { 
     background-color: transparent; 
     width: 300px;
-    margin:-260px 570px;
+    margin:-230px 570px;
     box-shadow: none;
 }
 
